vmexamples/service-web01.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: vmexamples
spec:
  selector:
    app: web01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
