vmexamples/route-web01.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webapp
  namespace: vmexamples
spec:
  to:
    kind: Service
    name: webapp
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
